--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,9 @@
 
 <div class="col-sm-8">
   <div *ngIf="movieData.Title">
-    <h1>{{movieData.Title}}</h1>
-    <h2>{{movieData.Year}}</h2>
+    <h1>Title: {{movieData.Title}}</h1>
+    <h2>Year of Release: {{movieData.Year}}</h2>
+    <h2>Genre: {{movieData.Genre}}</h2>
     <h2>Directed by : {{movieData.Director}}</h2>
   </div>
 </div>
